--- a/example/index.html
+++ b/example/index.html
@@ -39,6 +39,7 @@
                 var json = {
                     setNavColor:0xff000000,
                     setLogBtnText:"Demo loginAuth",
+                    setPrivacyState:true,
                     setAppPrivacyColor:[0xff00f000,0xff000000]
                 }
 
@@ -51,6 +52,7 @@
                 var json={
                     navColor:0xff000000,
                     logBtnText:"Demo loginAuth",
+                    privacyState:true,
                     appPrivacyColor:[0xff00f000,0xff000000]
                 }
 
