ios  更新支持弹框

--- a/example/index.html
+++ b/example/index.html
@@ -56,6 +56,32 @@
                     appPrivacyColor:[0xff00f000,0xff000000]
                 }
 
+                // var json={//弹框
+                //     navCustom:true,
+                //     autoLayout:true,
+                //     showWindow:true,
+                //     windowConstraints:[0,0,300,300],
+                //     windowBackgroundAlpha: 0.3,
+                //     //logo
+                //     logoImg:"AppIcon",
+                //     logoConstraints:[0,-100,60,60],
+                //     //number
+                //     numberConstraints:[0,-42,200,14],
+                //     //slogn
+                //     sloganConstraints:[0,-20,200,14],
+                //     //登录按钮
+                //     logBtnConstraints:[0,20,220,40],
+                //     logBtnText:"Demo loginAuth",
+                //     logBtnTextColor:0x0000FF,
+                //     windowCornerRadius:10,
+                //     privacyConstraints:[0,100,200,40],
+                //     checkViewConstraints:[-108,100,10,10],
+                //     windowCloseBtnConstraints:[-135,-135,20,20],
+                //     loadingConstraints:[0,0,20,20],
+                //     windowCloseBtnImgs:["AppIcon","AppIcon"],
+                //     windowBackgroundImage:"AppIcon"
+                // }
+
                 json = JSON.stringify(json);
                 // alert(json);
                 JGJVerificationPlugin.setCustomUIWithConfig(json);
