--- a/jverification_cordova_demo/www/index.html
+++ b/jverification_cordova_demo/www/index.html
@@ -31,7 +31,7 @@
 
         }
         
-        function btAction(){
+        function btAction(tagid){
             
             JGJVerificationPlugin.dismissLoginAuth()
 
@@ -46,7 +46,34 @@
                     setNavColor:0xff000000,
                     setLogBtnText:"Demo loginAuth",
                     setPrivacyState:true,
-                    setAppPrivacyColor:[0xff00f000,0xff000000]
+                    setAppPrivacyColor:[0xff00f000,0xff000000],
+                    customView:[
+                        {
+                            "widgetType":"Button",
+                            "widgetId":1001,
+                            "widgetLeft":20,
+                            "widgetTop":220,
+                            "widgetWidth":120,
+                            "widgetHeight":30,
+                            "widgetTitle":"我是自定义按钮",
+                            "widgetTitleFontSize":12,
+                            "widgetTitleNormalFontColor":0xff0000,
+                            "widgetNormalImage":"logo",
+                        },
+                        {
+                            "widgetType":"Label",
+                            "widgetId":1001,
+                            "widgetLeft":20,
+                            "widgetTop":260,
+                            "widgetWidth":120,
+                            "widgetHeight":30,
+                            "widgetText":"我是自定义标签",
+                            "widgetTextFontSize":12,
+                            "widgetTextFontColor":0x663412,
+                            "widgetBackgroundColor":0x003412,
+                            "widgetTextFontAlignment":"left"
+                        }
+                    ],
                 }
 
                 json = JSON.stringify(json);
