升级认证android到2.9.3

--- a/jverification_cordova_demo/www/index.html
+++ b/jverification_cordova_demo/www/index.html
@@ -47,6 +47,23 @@
                     setLogBtnText:"Demo loginAuth",
                     setPrivacyState:true,
                     setAppPrivacyColor:[0xff00f000,0xff000000],
+                    appPrivacys:[
+                        {
+                            "appPrivacyName":"自定义条款1",
+                            "appPrivacyUrl":"https://www.jiguang.cn/about",
+                            "appPrivacySeparator":"、"
+                        },
+                        {
+                            "appPrivacyName":"自定义条款2",
+                            "appPrivacyUrl":"https://www.jiguang.cn/about",
+                            "appPrivacySeparator":"、"
+                        },
+                        {
+                            "appPrivacyName":"自定义条款3",
+                            "appPrivacyUrl":"https://www.jiguang.cn/about",
+                            "appPrivacySeparator":"、"
+                        }
+                     ],
                     customView:[
                         {
                             "widgetType":"Button",
